# CC3200-Linux-SDK

./: .gitignore  Makefile
examples/adc/: main.c
other/Service Pack 1.0.1.6-2.7.0.0/: manifest.html  readme.txt
other/Service Pack 1.0.1.6-2.7.0.0/ota/: file.txt
src/driverlib/gcc/: Makefile
src/example/adc/gcc/: CMakeLists.txt  Makefile
src/example/aes/: main.c
src/example/aes/gcc/: Makefile
src/example/antenna_selection/: main.c
src/example/antenna_selection/gcc/: Makefile  antenna_selection.usf
src/example/antenna_selection/gcc/antenna_selection_session/fileSystem/: mode.cfg
src/example/antenna_selection/gcc/antenna_selection_session/templates/: CC3xxx_template.xml
src/example/blinky/gcc/: Makefile
src/example/camera_application/: camera_app.c  i2cconfig.c  main.c  mt9d111.c
src/example/camera_application/gcc/: Makefile  camera_application.ucf
src/example/camera_application/gcc/camera_application_session/templates/: CC3xxx_template.xml
src/example/common/: startup_gcc.c
src/example/common/gcc/: cc3200r1m1.ld  cc3200r1m2.ld  common.cmake  common.make  compiler.cmake  driverlib.inc  httpclient.inc  json.inc  middleware.inc  mqtt_client.inc  mqtt_server.inc  oslib.inc  simplelink.inc
src/example/connection_policy/: main.c
src/example/connection_policy/gcc/: Makefile
src/example/crc/: main.c
src/example/crc/gcc/: Makefile
src/example/des/: main.c
src/example/des/gcc/: Makefile
src/example/file_download/gcc/: Makefile
src/example/file_operations/: main.c  pinmux.c
src/example/file_operations/gcc/: Makefile
src/example/freertos_demo/gcc/: Makefile
src/example/get_time/: main.c
src/example/get_time/gcc/: Makefile
src/example/idle_profile/: main.c
src/example/idle_profile/gcc/: CMakeLists.txt  Makefile
src/example/idle_profile_nonos/gcc/: Makefile
src/example/mqtt_client/: main.c
src/example/mqtt_client/gcc/: Makefile
src/example/mqtt_server/: main.c
src/example/mqtt_server/gcc/: Makefile
src/middleware/framework/pm/: cc_pm.c
src/middleware/gcc/: Makefile
src/netapps/http/client/: network.h
src/netapps/http/client/gcc/: Makefile
src/netapps/json/gcc/: Makefile
src/netapps/mqtt/client/: mqtt_client.c
src/netapps/mqtt/gcc/: Makefile
src/netapps/mqtt/include/: sl_mqtt_client.h
src/netapps/mqtt/platform/: cc31xx_sl_net.c
src/netapps/mqtt/sl/: sl_mqtt_client.c
src/oslib/: osi.h  osi_freertos.c
src/oslib/gcc/: Makefile
src/simplelink/: cc_pal.c  user.h
src/simplelink/gcc/: Makefile
src/simplelink/include/: simplelink.h  socket.h
src/simplelink/source/: driver.c
src/tools/gdb_scripts/: cc3200.cfg  gdbinit  readme.txt
